--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -75,24 +75,14 @@
   },
   "pricing": {
     "title": "Выбери свой план",
-    "subtitle": "Начни бесплатно. Масштабируйся по мере роста.",
+    "subtitle": "Масштабируйся по мере роста.",
     "selectCurrency": "Выбери валюту",
-    "free": "Бесплатно",
-    "forever": "навсегда",
     "month": "в месяц",
     "popular": "Популярный",
     "try": "Попробовать",
     "choosePlan": "Выбрать план",
-    "footer": "Бесплатный тариф навсегда • Платные тарифы без привязки карты",
+    "footer": "Платные тарифы без привязки карты",
     "plans": {
-      "free": {
-        "subtitle": "Попробуй возможности",
-        "features": {
-          "channels": "До 5 каналов мониторинга",
-          "queries": "До 10 ключевых запросов",
-          "support": "Базовая поддержка"
-        }
-      },
       "light": {
         "subtitle": "Для начинающих"
       },
@@ -150,9 +140,8 @@
   },
   "cta": {
     "title": "Готов автоматизировать мониторинг?",
-    "subtitle": "Начни с бесплатного тарифа навсегда. Без кредитной карты, без ограничений по времени.",
+    "subtitle": "Начни использовать прямо сейчас. Без привязки карты.",
     "stats": {
-      "free": "Бесплатно навсегда",
       "noLimits": "Без ограничений",
       "setup": "3 мин",
       "setupLabel": "Настройка"
@@ -232,7 +221,6 @@
           "title": "5. Тарифы и оплата",
           "text": "Сервис предоставляется на условиях различных тарифных планов:",
           "items": [
-            "Бесплатный тариф - предоставляется навсегда с ограниченным функционалом",
             "Платные тарифы - оплачиваются через Telegram Stars на ежемесячной основе",
             "Оплата производится заранее за выбранный период",
             "Возврат средств не предусмотрен, за исключением случаев технических сбоев"
@@ -414,7 +402,7 @@
         },
         "cta": {
           "title": "Начни прямо сейчас",
-          "description": "Настрой мониторинг крипто-каналов за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "description": "Настрой мониторинг крипто-каналов за 3 минуты.",
           "button": "Настроить мониторинг"
         },
         "backToHome": "← Вернуться на главную"
@@ -470,7 +458,7 @@
         },
         "cta": {
           "title": "Начни автоматизировать",
-          "description": "Настрой мониторинг контента для ваших клиентов за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "description": "Настрой мониторинг контента для ваших клиентов за 3 минуты.",
           "button": "Настроить мониторинг"
         },
         "backToHome": "← Вернуться на главную"
@@ -526,7 +514,7 @@
         },
         "cta": {
           "title": "Начни использовать",
-          "description": "Настрой мониторинг новостных источников за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "description": "Настрой мониторинг новостных источников за 3 минуты.",
           "button": "Настроить мониторинг"
         },
         "backToHome": "← Вернуться на главную"
@@ -582,7 +570,7 @@
         },
         "cta": {
           "title": "Начни использовать",
-          "description": "Настрой мониторинг товаров и предложений за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "description": "Настрой мониторинг товаров и предложений за 3 минуты.",
           "button": "Настроить мониторинг"
         },
         "backToHome": "← Вернуться на главную"
@@ -638,7 +626,7 @@
         },
         "cta": {
           "title": "Начни использовать",
-          "description": "Настрой мониторинг кандидатов и рынка труда за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "description": "Настрой мониторинг кандидатов и рынка труда за 3 минуты.",
           "button": "Настроить мониторинг"
         },
         "backToHome": "← Вернуться на главную"
@@ -694,7 +682,7 @@
         },
         "cta": {
           "title": "Начни использовать",
-          "description": "Настрой мониторинг выгодных предложений за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "description": "Настрой мониторинг выгодных предложений за 3 минуты.",
           "button": "Настроить мониторинг"
         },
         "backToHome": "← Вернуться на главную"
@@ -717,11 +705,11 @@
           },
           "channelsLimit": {
             "question": "Сколько каналов можно мониторить?",
-            "answer": "Лимиты по тарифам:\n• Бесплатный: до 5 каналов мониторинга, до 10 ключевых запросов\n• Light: до 50 каналов, до 50 ключевых запросов\n• Medium: до 100 каналов, до 100 ключевых запросов\n• Hard: до 200 каналов, до 200 ключевых запросов\n• Rock: до 500 каналов, до 200 ключевых запросов\n\nЧто считается:\n• Каналы мониторинга (откуда берутся сообщения)\n• Каналы публикации (куда публикуются сообщения)\n• Общее количество = каналы мониторинга + каналы публикации"
+            "answer": "Лимиты по тарифам:\n• Light: до 50 каналов, до 50 ключевых запросов\n• Medium: до 100 каналов, до 100 ключевых запросов\n• Hard: до 200 каналов, до 200 ключевых запросов\n• Rock: до 500 каналов, до 200 ключевых запросов\n\nЧто считается:\n• Каналы мониторинга (откуда берутся сообщения)\n• Каналы публикации (куда публикуются сообщения)\n• Общее количество = каналы мониторинга + каналы публикации"
           },
           "privateChannels": {
             "question": "Можно ли мониторить приватные каналы?",
-            "answer": "Да, но с условиями:\n• Требуется подключение личного Telegram-аккаунта\n• Требуется платный тариф (Light, Medium, Hard, Rock)\n• Нужен доступ к каналу (подписка или invite-ссылка)\n\nКак добавить приватный канал:\n1. Подключите личный аккаунт\n2. Получите invite-ссылку на канал\n3. Отправьте invite-ссылку боту\n4. Бот автоматически подпишется на канал через ваш аккаунт\n\nОграничения:\n• Приватные каналы можно мониторить только через личный аккаунт\n• Бесплатный тариф не поддерживает приватные каналы\n• Уведомления от канала автоматически отключаются"
+            "answer": "Да, но с условиями:\n• Требуется подключение личного Telegram-аккаунта\n• Требуется платный тариф (Light, Medium, Hard, Rock)\n• Нужен доступ к каналу (подписка или invite-ссылка)\n\nКак добавить приватный канал:\n1. Подключите личный аккаунт\n2. Получите invite-ссылку на канал\n3. Отправьте invite-ссылку боту\n4. Бот автоматически подпишется на канал через ваш аккаунт\n\nОграничения:\n• Приватные каналы можно мониторить только через личный аккаунт\n• Уведомления от канала автоматически отключаются"
           },
           "speed": {
             "question": "Как быстро приходят сообщения после публикации?",
@@ -795,10 +783,6 @@
       "pricing": {
         "title": "Тарифы и планы",
         "items": {
-          "freePlan": {
-            "question": "Что входит в бесплатный план?",
-            "answer": "Возможности бесплатного плана:\n• До 3 каналов (мониторинг + публикация)\n• До 10 ключевых запросов\n• До 10 постов при копировании старых сообщений\n• Базовая поддержка\n• Бесплатно навсегда - без ограничений по времени\n\nОграничения:\n• Подключение личного аккаунта: недоступно\n• Можно мониторить только публичные каналы\n• Ограниченное количество каналов\n\nИдеально для:\n• Тестирования сервиса\n• Базовых потребностей в мониторинге\n• Личного использования с небольшим количеством каналов"
-          },
           "paidPlans": {
             "question": "Какие есть платные планы и их лимиты?",
             "answer": "План Light:\n• 50 каналов, 50 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 150 Telegram Stars/месяц (≈3 EUR)\n\nПлан Medium:\n• 100 каналов, 100 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 250 Telegram Stars/месяц (≈5 EUR)\n\nПлан Hard:\n• 200 каналов, 200 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 500 Telegram Stars/месяц (≈12 EUR)\n\nПлан Rock:\n• 500 каналов, 200 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 1000 Telegram Stars/месяц\n\nВсе платные планы включают:\n• Мониторинг приватных каналов\n• Подключение личного аккаунта\n• Приоритетная поддержка"
