--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -21,7 +21,7 @@
       "setup": "Настроить за 3 минуты",
       "learnMore": "Узнать больше"
     },
-    "footer": "🔒 Безопасно • Бесплатно навсегда • Без кредитной карты"
+    "footer": "Экономь время • Будь в курсе • Получай данные мгновенно"
   },
   "features": {
     "title": "Ключевые преимущества",
@@ -705,11 +705,11 @@
           },
           "channelsLimit": {
             "question": "Сколько каналов можно мониторить?",
-            "answer": "Лимиты по тарифам:\n• Light: до 50 каналов, до 50 ключевых запросов\n• Medium: до 100 каналов, до 100 ключевых запросов\n• Hard: до 200 каналов, до 200 ключевых запросов\n• Rock: до 500 каналов, до 200 ключевых запросов\n\nЧто считается:\n• Каналы мониторинга (откуда берутся сообщения)\n• Каналы публикации (куда публикуются сообщения)\n• Общее количество = каналы мониторинга + каналы публикации"
+            "answer": "Лимиты по тарифам:\n• Демо: до 50 каналов, до 50 ключевых запросов (действует 10 дней)\n• Light: до 50 каналов, до 50 ключевых запросов\n• Medium: до 100 каналов, до 100 ключевых запросов\n• Hard: до 200 каналов, до 200 ключевых запросов\n• Rock: до 500 каналов, до 200 ключевых запросов\n\nЧто считается:\n• Каналы мониторинга (откуда берутся сообщения)\n• Каналы публикации (куда публикуются сообщения)\n• Общее количество = каналы мониторинга + каналы публикации"
           },
           "privateChannels": {
             "question": "Можно ли мониторить приватные каналы?",
-            "answer": "Да, но с условиями:\n• Требуется подключение личного Telegram-аккаунта\n• Требуется платный тариф (Light, Medium, Hard, Rock)\n• Нужен доступ к каналу (подписка или invite-ссылка)\n\nКак добавить приватный канал:\n1. Подключите личный аккаунт\n2. Получите invite-ссылку на канал\n3. Отправьте invite-ссылку боту\n4. Бот автоматически подпишется на канал через ваш аккаунт\n\nОграничения:\n• Приватные каналы можно мониторить только через личный аккаунт\n• Уведомления от канала автоматически отключаются"
+            "answer": "Да, но с условиями:\n• Требуется подключение личного Telegram-аккаунта\n• Требуется платный тариф (Light, Medium, Hard, Rock)\n• Нужен доступ к каналу (подписка или invite-ссылка)\n\nКак добавить приватный канал:\n1. Подключите личный аккаунт\n2. Получите invite-ссылку на канал\n3. Отправьте invite-ссылку боту\n4. Бот автоматически подпишется на канал через ваш аккаунт\n\nОграничения:\n• Приватные каналы можно мониторить только через личный аккаунт\n• Тариф Демо не поддерживает приватные каналы\n• Уведомления от канала автоматически отключаются"
           },
           "speed": {
             "question": "Как быстро приходят сообщения после публикации?",
@@ -783,6 +783,10 @@
       "pricing": {
         "title": "Тарифы и планы",
         "items": {
+          "demoPlan": {
+            "question": "Что входит в тариф Демо?",
+            "answer": "Возможности тарифа Демо:\n• До 50 каналов (мониторинг + публикация)\n• До 50 ключевых запросов\n• Действует 10 дней\n• Базовая поддержка\n\nОграничения:\n• Подключение личного аккаунта: недоступно\n• Можно мониторить только публичные каналы\n• Тариф действует 10 дней с момента активации\n\nИдеально для:\n• Тестирования сервиса\n• Ознакомления с функционалом\n• Оценки возможностей перед выбором платного тарифа"
+          },
           "paidPlans": {
             "question": "Какие есть платные планы и их лимиты?",
             "answer": "План Light:\n• 50 каналов, 50 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 150 Telegram Stars/месяц (≈3 EUR)\n\nПлан Medium:\n• 100 каналов, 100 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 250 Telegram Stars/месяц (≈5 EUR)\n\nПлан Hard:\n• 200 каналов, 200 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 500 Telegram Stars/месяц (≈12 EUR)\n\nПлан Rock:\n• 500 каналов, 200 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 1000 Telegram Stars/месяц\n\nВсе платные планы включают:\n• Мониторинг приватных каналов\n• Подключение личного аккаунта\n• Приоритетная поддержка"
