--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -77,7 +77,15 @@
     "title": "Выбери свой план",
     "subtitle": "Масштабируйся по мере роста.",
     "selectCurrency": "Выбери валюту",
+    "selectDuration": "Выбери срок",
     "month": "в месяц",
+    "months": "мес.",
+    "discount": "Скидка",
+    "duration": {
+      "1": "1 месяц",
+      "3": "3 месяца (-10%)",
+      "12": "12 месяцев (-30%)"
+    },
     "popular": "Популярный",
     "try": "Попробовать",
     "choosePlan": "Выбрать план",
