Update CTA section to show demo period (10 days) instead of free plan

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -150,6 +150,8 @@
     "title": "Ready to automate monitoring?",
     "subtitle": "Start using right now. No card binding required.",
     "stats": {
+      "demoDays": "10 days",
+      "demoLabel": "Test for free",
       "noLimits": "No limits",
       "setup": "3 min",
       "setupLabel": "Setup"
