--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -150,6 +150,8 @@
     "title": "Готов автоматизировать мониторинг?",
     "subtitle": "Начни использовать прямо сейчас. Без привязки карты.",
     "stats": {
+      "demoDays": "10 дней",
+      "demoLabel": "Тестируй бесплатно",
       "noLimits": "Без ограничений",
       "setup": "3 мин",
       "setupLabel": "Настройка"
