--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -13,6 +13,7 @@
     "titleHighlight": "пусть она найдёт тебя",
     "subtitle": "Автоматизируй мониторинг Telegram-каналов. Получай только релевантную информацию в реальном времени.",
     "stats": {
+      "maxChannels": "до 500",
       "channels": "каналов мониторинга",
       "time": "времени на поиск",
       "relevance": "релевантности"
